RESOLVED FIXED136889
[GTK] WebKitWebView::load-failed-with-tls-errors should receive the failing URI instead of a host
https://bugs.webkit.org/show_bug.cgi?id=136889
Summary [GTK] WebKitWebView::load-failed-with-tls-errors should receive the failing U...
Carlos Garcia Campos
Reported 2014-09-17 08:21:42 PDT
We were passing a host for two different reasons, first because it's more convenient to add an exception with webkit_web_context_allow_tls_certificate_for_host(), but also because we were assuming the active URI is the failing URI in case of failure. This assumption is correct because our current code does that, but I'm not sure we are doing it on purpose. That behaviour is not documented anywhere (see http://webkitgtk.org/reference/webkit2gtk/stable/WebKitWebView.html#webkit-web-view-get-uri), it's not what WebKit2 does internaly (see https://bugs.webkit.org/show_bug.cgi?id=136526#c2) and it's not even what epiphany assumes (see https://git.gnome.org/browse/epiphany/tree/embed/ephy-web-view.c?id=3.13.91#n1986). WebKitWebView::load-failed passes the failing URI as parameter, that wouldn't be needed if the active URI was the failing URI. This API has already been changed in this cycle and it's considered to be new in 2.6, so this new change is not a problem.
Attachments
Patch (12.77 KB, patch)
2014-09-17 08:29 PDT, Carlos Garcia Campos
gustavo: review+
Carlos Garcia Campos
Comment 1 2014-09-17 08:29:42 PDT
Carlos Garcia Campos
Comment 2 2014-09-17 09:11:29 PDT
Note You need to log in before you can comment on or make changes to this bug.